--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@supabase/supabase-js": "^2.50.0",
     "autoprefixer": "^10.4.17",
     "chart.js": "^4.4.1",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
