--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,18 +4,19 @@
   "private": true,
   "dependencies": {
     "@supabase/auth-helpers-react": "^0.5.0",
-    "@supabase/supabase-js": "^2.50.0",
-    "autoprefixer": "^10.4.17",
-    "chart.js": "^4.4.1",
+    "@supabase/supabase-js": "^2.50.2",
+    "autoprefixer": "^10.4.21",
+    "chart.js": "^4.5.0",
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
-    "postcss": "^8.4.35",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "postcss": "^8.5.6",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^6.22.3",
+    "react-router-dom": "^6.30.1",
     "react-scripts": "^5.0.1",
-    "tailwindcss": "^3.4.3",
+    "react-toastify": "^11.0.5",
+    "tailwindcss": "^3.4.17",
     "yup": "^1.6.1"
   },
   "devDependencies": {
