--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,18 @@
   "name": "exide-it-asset-manager-frontend",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "18.x",
+    "npm": ">=8.0.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "prepare": "node -v && npm -v && npm ci"
+  },
   "dependencies": {
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/supabase-js": "^2.50.2",
@@ -14,19 +26,14 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.1",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^3.4.17",
     "yup": "^1.6.1"
   },
   "devDependencies": {
-    "jest": "^29.7.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "jest": "^29.7.0",
+    "prettier": "^3.0.0"
   },
   "browserslist": {
     "production": [
